# g4omniverse

./: .gitignore  CMakeLists.txt  README.md
public/paper1/: G4_USD_Schema.drawio  conversion_example.py  simple_usd_example.py
schema/: CMakeLists.txt  SurfaceMesh.cpp  SurfaceMesh.h  VSolidAdapter.cpp  VSolidAdapter.h  api.h  assembly.cpp  assembly.h  booleanSolid.cpp  booleanSolid.h  box.cpp  box.h  boxAdapter.cpp  boxAdapter.h  cgal_boolean.cpp  cgal_boolean.h  cons.cpp  cons.h  cutTubs.cpp  cutTubs.h  displacedSolid.cpp  displacedSolid.h  g4.usda  g4schema.usda  generatedSchema.usda  intersection.cpp  intersection.h  logical.cpp  logical.h  module.cpp  moduleDeps.cpp  multiUnion.cpp  multiUnion.h  named.cpp  named.h  orb.cpp  orb.h  physical.cpp  physical.h  placement.cpp  (+33 more)
tests/: test_booleantree.py  test_intersection.py  test_logical.py  test_logical_physical.py  test_multiunion.py  test_subtraction.py  test_subtraction_instance.py  test_subtraction_reference.py  test_subtraction_reference_multiple.py  test_union.py
